--- a/potfolio.html
+++ b/potfolio.html
@@ -36,7 +36,98 @@
 
     <main>
       <!--Герой-->
-      <h1>Контент страниц портфолио</h1>
+      <h1></h1>
+      <ul class="list-button">
+        <li><button type="button">Все</button></li>
+        <li><button type="button">Веб-сайты</button></li>
+        <li><button type="button">Приложения</button></li>
+        <li><button type="button">Дизайн</button></li>
+        <li><button type="button">Маркетинг</button></li>
+      </ul>
+      <section>
+        <ul>
+          <li>
+            <img src="./images/potfolio/img.jpg" alt="люди" width="370" />
+            <h2 class="title">Технокряк</h2>
+            <p>
+              Веб-сайт
+            </p>
+            <p>
+              Технокряк это современная площадка распространения коронавируса.
+              Компании используют эту платформу для цифрового шпионажа и атак на
+              защищённые сервера конкурентов.
+            </p>
+          </li>
+
+          <li>
+            <img
+              src="./images/potfolio/img2.jpg"
+              alt="баскетболисты"
+              width="370"
+            />
+            <h2 class="title">Постер New Orlean vs Golden Star</h2>
+            <p>
+              Дизайн
+            </p>
+          </li>
+          <li>
+            <img src="./images/potfolio/img3.jpg" alt="логотип" width="370" />
+            <h2 class="title">Ресторан Seafood</h2>
+            <p>
+              Приложение
+            </p>
+          </li>
+          <li>
+            <img src="./images/potfolio/img4.jpg" alt="наушники" width="370" />
+            <h2 class="title">Проект Prime</h2>
+            <p>
+              Маркетинг
+            </p>
+          </li>
+          <li>
+            <img src="./images/potfolio/img5.jpg" alt="коробки" width="370" />
+            <h2 class="title">Проект Boxes</h2>
+            <p>
+              Приложение
+            </p>
+          </li>
+          <li>
+            <img src="./images/potfolio/img6.jpg" alt="наушники" width="370" />
+            <h2 class="title">Inspiration has no Borders</h2>
+            <p>
+              Веб-сайт
+            </p>
+          </li>
+          <li>
+            <img src="./images/potfolio/img6.jpg" alt="монитор" width="370" />
+            <h2 class="title">Inspiration has no Borders</h2>
+            <p>
+              Веб-сайт
+            </p>
+          </li>
+          <li>
+            <img src="./images/potfolio/img7.jpg" alt="монитор" width="370" />
+            <h2 class="title">Издание Limited Edition</h2>
+            <p>
+              Дизайн
+            </p>
+          </li>
+          <li>
+            <img src="./images/potfolio/img8.jpg" alt="логотип" width="370" />
+            <h2 class="title">Проект LAB</h2>
+            <p>
+              Маркетинг
+            </p>
+          </li>
+          <li>
+            <img src="./images/potfolio/img9.jpg" alt="ноутбук" width="370" />
+            <h2 class="title">Growing Business</h2>
+            <p>
+              Приложение
+            </p>
+          </li>
+        </ul>
+      </section>
     </main>
     <!--Футер-->
     <footer>
