--- a/index.html
+++ b/index.html
@@ -4,6 +4,10 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Web Studio</title>
+    <link
+      href="https://fonts.googleapis.com/css2?family=Raleway:wght@400;700;900&family=Roboto:wght@400;500;700&display=swap"
+      rel="stylesheet"
+    />
     <link rel="stylesheet" href="./css/common.css" />
     <link rel="stylesheet" href="./css/main.css" />
   </head>
@@ -50,7 +54,7 @@
               alt="антенна"
               width="70"
             />
-            <h3 class="title">Внимание к деталям</h3>
+            <h3 class="section-descriptions">Внимание к деталям</h3>
             <p>
               Идейные соображения, а также начало повседневной работы по
               формированию позиции.
@@ -58,7 +62,7 @@
           </li>
           <li>
             <img src="./images/features/clock2.svg" alt="часы" width="70" />
-            <h3 class="title">Пунктуальность</h3>
+            <h3 class="section-descriptions">Пунктуальность</h3>
             <p>
               Задача организации, в особенности же рамки и место обучения кадров
               влечет за собой.
@@ -70,7 +74,7 @@
               alt="диаграмма"
               width="70"
             />
-            <h3 class="title">Планирование</h3>
+            <h3 class="section-descriptions">Планирование</h3>
             <p>
               Равным образом консультация с широким активом в значительной
               степени обуславливает.
@@ -82,7 +86,7 @@
               alt="астронавт"
               width="70"
             />
-            <h3 class="title">Современные технологии</h3>
+            <h3 class="section-descriptions">Современные технологии</h3>
             <p>
               Значимость этих проблем настолько очевидна, что реализация
               плановых заданий.
@@ -101,7 +105,7 @@
               alt="Десктопные приложения"
               width="370"
             />
-            <h3>Десктопные приложения</h3>
+            <h3 class="section-descriptions">Десктопные приложения</h3>
           </li>
 
           <li>
@@ -110,7 +114,7 @@
               alt="Мобильные приложения"
               width="370"
             />
-            <h3>Мобильные приложения</h3>
+            <h3 class="section-descriptions">Мобильные приложения</h3>
           </li>
 
           <li>
@@ -119,7 +123,7 @@
               alt="Дизайнерские решения"
               width="370"
             />
-            <h3>Дизайнерские решения</h3>
+            <h3 class="section-descriptions">Дизайнерские решения</h3>
           </li>
         </ul>
       </section>
@@ -127,7 +131,7 @@
       <!--Наша команда-->
       <section class="section">
         <h2 class="section-title">Наша команда</h2>
-        <ul>
+        <ul class="team-list">
           <li>
             <img
               src="./images/team/team1.jpg"
