--- a/potfolio.html
+++ b/potfolio.html
@@ -4,6 +4,10 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Web Studio</title>
+    <link
+      href="https://fonts.googleapis.com/css2?family=Raleway:wght@400;700;900&family=Roboto:wght@400;500;700&display=swap"
+      rel="stylesheet"
+    />
     <link rel="stylesheet" href="./css/common.css" />
     <link rel="stylesheet" href="./css/portfolio.css" />
   </head>
@@ -44,7 +48,7 @@
         <li><button type="button">Дизайн</button></li>
         <li><button type="button">Маркетинг</button></li>
       </ul>
-      <section>
+      <section class="section">
         <ul>
           <li>
             <img src="./images/potfolio/img.jpg" alt="люди" width="370" />
