--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
       <!--Герой-->
       <section class="hero">
         <h1 class="hero-title">Эффективные решения для вашего бизнеса</h1>
-        <a href="" class="button">Заказать услугу</a>
+        <a href="" class="button-hero">Заказать услугу</a>
       </section>
 
       <!--Особенности-->
