--- a/potfolio.html
+++ b/potfolio.html
@@ -49,10 +49,10 @@
         <li><button type="button">Маркетинг</button></li>
       </ul>
       <section class="section">
-        <ul>
+        <ul class="project-list">
           <li>
             <img src="./images/potfolio/img.jpg" alt="люди" width="370" />
-            <h2 class="title">Технокряк</h2>
+            <h2 class="project-title">Технокряк</h2>
             <p>
               Веб-сайт
             </p>
@@ -69,63 +69,63 @@
               alt="баскетболисты"
               width="370"
             />
-            <h2 class="title">Постер New Orlean vs Golden Star</h2>
+            <h2 class="project-title">Постер New Orlean vs Golden Star</h2>
             <p>
               Дизайн
             </p>
           </li>
           <li>
             <img src="./images/potfolio/img3.jpg" alt="логотип" width="370" />
-            <h2 class="title">Ресторан Seafood</h2>
+            <h2 class="project-title">Ресторан Seafood</h2>
             <p>
               Приложение
             </p>
           </li>
           <li>
             <img src="./images/potfolio/img4.jpg" alt="наушники" width="370" />
-            <h2 class="title">Проект Prime</h2>
+            <h2 class="project-title">Проект Prime</h2>
             <p>
               Маркетинг
             </p>
           </li>
           <li>
             <img src="./images/potfolio/img5.jpg" alt="коробки" width="370" />
-            <h2 class="title">Проект Boxes</h2>
+            <h2 class="project-title">Проект Boxes</h2>
             <p>
               Приложение
             </p>
           </li>
           <li>
             <img src="./images/potfolio/img6.jpg" alt="наушники" width="370" />
-            <h2 class="title">Inspiration has no Borders</h2>
+            <h2 class="project-title">Inspiration has no Borders</h2>
             <p>
               Веб-сайт
             </p>
           </li>
           <li>
             <img src="./images/potfolio/img6.jpg" alt="монитор" width="370" />
-            <h2 class="title">Inspiration has no Borders</h2>
+            <h2 class="project-title">Inspiration has no Borders</h2>
             <p>
               Веб-сайт
             </p>
           </li>
           <li>
             <img src="./images/potfolio/img7.jpg" alt="монитор" width="370" />
-            <h2 class="title">Издание Limited Edition</h2>
+            <h2 class="project-title">Издание Limited Edition</h2>
             <p>
               Дизайн
             </p>
           </li>
           <li>
             <img src="./images/potfolio/img8.jpg" alt="логотип" width="370" />
-            <h2 class="title">Проект LAB</h2>
+            <h2 class="project-title">Проект LAB</h2>
             <p>
               Маркетинг
             </p>
           </li>
           <li>
             <img src="./images/potfolio/img9.jpg" alt="ноутбук" width="370" />
-            <h2 class="title">Growing Business</h2>
+            <h2 class="project-title">Growing Business</h2>
             <p>
               Приложение
             </p>
