--- a/index.html
+++ b/index.html
@@ -329,7 +329,7 @@
 
       <!--Наши клиенты-->
       <section class="section">
-        <h2 class="title">Постоянные клиенты</h2>
+        <h2 class="section-title">Постоянные клиенты</h2>
         <ul>
           <li>
             <a href="">
